@@ -173,6 +173,7 @@ def debug_flag_error(flag):
         log-requests: Log all network requests.
         log-cookies: Log cookies in cookie filter.
         log-scroll-pos: Log all scrolling changes.
+        log-sensitive-keys: Log keypresses in passthrough modes.
         stack: Enable Chromium stack logging.
         chromium: Enable Chromium logging.
         wait-renderer-process: Wait for debugger in renderer process.
@@ -181,7 +182,7 @@ def debug_flag_error(flag):
     """
     valid_flags = ['debug-exit', 'pdb-postmortem', 'no-sql-history',
                    'no-scroll-filtering', 'log-requests', 'log-cookies',
-                   'log-scroll-pos', 'stack', 'chromium',
+                   'log-scroll-pos', 'log-sensitive-keys', 'stack', 'chromium',
                    'wait-renderer-process', 'avoid-chromium-init', 'werror']
 
     if flag in valid_flags:
